CollectionViewCell and tableViewCell are done

--- a/WeatherApp/Views/InfoWeatherCollectionViewCell.xib
+++ b/WeatherApp/Views/InfoWeatherCollectionViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="InfoWeatherCollectionViewCell" customModule="WeatherApp" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="gTV-IL-0wX" customClass="InfoWeatherCollectionViewCell" customModule="WeatherApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -24,13 +24,34 @@
                             <constraint firstAttribute="width" constant="30" id="jNu-Ug-aSv"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i6f-vt-skl">
+                        <rect key="frame" x="0.0" y="5" width="80" height="20"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HxR-oa-eIy">
+                        <rect key="frame" x="0.0" y="52.666666666666664" width="80" height="22.333333333333336"/>
+                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="RRR-zj-p2a" secondAttribute="bottom" constant="5" id="28a-MG-WpZ"/>
+                <constraint firstAttribute="bottom" secondItem="HxR-oa-eIy" secondAttribute="bottom" constant="5" id="508-wA-Lmy"/>
+                <constraint firstAttribute="trailing" secondItem="HxR-oa-eIy" secondAttribute="trailing" id="pSW-9K-SFV"/>
                 <constraint firstItem="RRR-zj-p2a" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="uZi-0b-0eq"/>
+                <constraint firstItem="HxR-oa-eIy" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="yCf-iD-Bob"/>
             </constraints>
+            <connections>
+                <outlet property="infoImageView" destination="RRR-zj-p2a" id="GRm-7K-MM9"/>
+                <outlet property="infoLabel" destination="i6f-vt-skl" id="8u0-cx-ZFj"/>
+                <outlet property="nameLabel" destination="HxR-oa-eIy" id="Td3-Y2-zfv"/>
+            </connections>
             <point key="canvasLocation" x="122" y="-11"/>
         </collectionViewCell>
     </objects>
